<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartCity</string>
    <string name="title_activity_maps">Alert Map</string>
    <string name="select_language">Choose Language</string>
    <string name="welcome">Welcome Aboard!</string>
    <string name="languages">Languages</string>

    <string name="signin">Sign In</string>
    <string name="action_settings">Settings</string>
    <string name="create_alert">Create Alert</string>

    <string name="enter_id">Enter your ID number</string>
    <string name="enter_pswd">Password</string>
    <string name="under_cons">Under Construction. Watch this space!</string>
    <string name="visiting">Just Visiting</string>
    <string name="alert_cat">Alert Category</string>
    <string name="alert_color">Alert Colour</string>
    <string name="enter_message">Enter message or comment</string>
    <string name="take_pics">Take Pictures</string>
    <string name="send_alert">Send Alert</string>
    <string name="map">Map</string>
    <string name="city_gallery">City Gallery</string>
    <string name="comms">Correspondence</string>
    <string name="info">Citizen Information</string>
    <string name="map_not_avail">Map not available</string>
    <string name="directions">Directions</string>
    <string name="pictures">Alert Pictures</string>
    <string name="photo_err">Photo error. Please try again.</string>
    <string name="alert_pics">Alert Pictures</string>
    <string name="title_activity_alert_picture_grid">AlertPictureGridActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="sel_type">Select Alert Type</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main_pager">MainPagerActivity</string>
    <string name="title_activity_registration">Registration</string>
    <string name="enter_fname">Please enter your first name</string>
    <string name="enter_lname">Please enter your last name</string>
    <string name="select_email">Please select email account</string>
    <string name="no_accts">No Accounts found. Please create one and try again</string>
    <string name="title_activity_account">AccountActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="optional">Optional</string>
    <string name="active_alerts">Active City Alerts</string>
    <string name="address_not_found">Address could not be calculated from the Alert coordinates</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="payments">Payments</string>
    <string name="city_alerts">City Alerts</string>
    <string name="my_complaints">My Complaints</string>
    <string name="my_accounts">My Accounts</string>
    <string name="comps_around_me">Complaints Around Me</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="comp_types">Complaint Types</string>
    <string name="get_distance">Distance from You</string>
    <string name="dist_calc">"Distance calculated is: "</string>
    <string name="loc_unavailable">My location is not available</string>
    <string name="pay">Pay</string>
    <string name="acct_paymnts">"Account Payments: "</string>
    <string name="no_complaints">No Complaints</string>
    <string name="loc_services_not">Location Services Not Active</string>
    <string name="enable_gps">Please enable Location Services and GPS</string>
    <string name="complaints_around_me">Complaints Around Me</string>
    <string name="enter_detail">Enter Details or Comment</string>
    <string name="enter_complaint_address">Enter Complaint Address</string>
    <string name="sel_complaint_type">Select Complaint Type</string>
    <string name="make_complaint">Make a Complaint</string>
    <string name="unable_connect_muni">Unable to reach your Municipality. Data may be out of date.</string>
    <string name="complaints_history">Complaints History</string>
    <string name="city_news">City News</string>
    <string name="title_activity_my_complaints">MyComplaintsActivity</string>
    <string name="unable_save_photo">Unable to save photo. Please try again</string>
    <string name="compl_pics">Complaint Pictures</string>
    <string name="title_activity_faq">FaqActivity</string>
    <string name="title_activity_muni_contacts">MuniContactsActivity</string>
    <string name="title_activity_statement">StatementActivity</string>
    <string name="news_map">News on the Map</string>
    <string name="map_complaints">Complaints on the Map</string>
    <string name="no_network">No network connected. Please connect and try again</string>
    <string name="conn_interrupted">Connections to server interrupted. Please try again.</string>

</resources>
