<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_myaccts"
            android:icon="@drawable/ic_my_library_books_black_36dp"
            android:title="@string/my_accounts" />
        <item
            android:id="@+id/nav_mycompl"
            android:icon="@android:drawable/ic_btn_speak_now"
            android:title="@string/my_complaints" />
        <item
            android:id="@+id/nav_createComplaint"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/make_complaint" />
        <item
            android:id="@+id/nav_alerts"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/city_alerts" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_action_news"
            android:title="@string/city_news" />
        <item
            android:id="@+id/nav_complaintsAroundMe"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/complaints_around_me" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_action_help"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_gallery"
            android:visible="false"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/city_gallery" />
    </group>

    <!--<item android:title="Sub items">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:icon="@drawable/ic_dashboard"-->
                <!--android:title="Sub item 1" />-->
            <!--<item-->
                <!--android:icon="@drawable/ic_forum"-->
                <!--android:title="Sub item 2" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
