<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

      <!--  <item
            android:id="@+id/nav_createComplaint"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/make_complaint" /> -->
        <item
            android:id="@+id/nav_alerts"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/city_alerts" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_action_news"
            android:title="@string/city_news" />
      <!--  <item
            android:id="@+id/nav_complaintsAroundMe"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/complaints_around_me" /> -->
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_action_help"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_signin"
            android:icon="@drawable/ic_action_secure"
            android:title="@string/sign_in"/>
       <!-- <item
            android:id="@+id/nav_gallery"
            android:visible="false"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/city_gallery" /> -->
    </group>
</menu>