<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey"
    android:padding="@dimen/mon_divider_tiny"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/CC_handle"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <ScrollView
            android:id="@+id/CC_scroll"
            android:layout_below="@id/CC_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/CC_titleLayout"

                    android:background="@color/midnight_blue"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/mon_hero_height_medium">

                    <ImageView
                        android:id="@+id/CC_hero"
                        android:src="@drawable/back6"
                        android:scaleType="centerCrop"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/mon_hero_height_medium" />

                    <TextView
                        android:id="@+id/CC_title"
                        android:text="My Title Here"
                        style="@style/Title1TextStyleWhite"
                        android:layout_margin="@dimen/mon_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/CC_subTitle"
                        android:text="My sub title will occupy pride of place here"
                        style="@style/TextStyleSmall"
                        android:textColor="@color/white"
                        android:layout_below="@id/CC_title"
                        android:layout_alignLeft="@id/CC_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/CC_middle"
                    android:layout_below="@id/CC_titleLayout"
                    android:background="@color/white"
                    android:padding="@dimen/mon_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/CC_complaintType"
                        style="@style/Title2TextStyleBlue"
                        android:text="@string/sel_complaint_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/CC_comment"
                        android:layout_below="@id/CC_complaintType"
                        android:layout_marginTop="@dimen/mon_margin"
                        android:hint="@string/enter_detail"
                        android:inputType="textCapSentences"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <RelativeLayout
                        android:id="@+id/CC_addressLayout"
                        android:layout_below="@id/CC_comment"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/CC_getGeoAddress"
                            style="@style/Title3TextStyleBlue"
                            android:layout_marginTop="@dimen/mon_margin"
                            android:text="Get address where you are now"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/CC_address"
                            android:layout_below="@id/CC_getGeoAddress"
                            android:layout_marginTop="@dimen/mon_margin"
                            android:hint="@string/enter_complaint_address"
                            android:inputType="textPostalAddress"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_below="@id/CC_addressLayout"
                        android:gravity="center"
                        android:paddingBottom="@dimen/mon_wide"
                        android:layout_marginTop="@dimen/mon_margin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.dd.ShadowLayout
                            app:sl_shadowRadius="4dp"
                            app:sl_shadowColor="#AA000000"
                            app:sl_dx="2dp"
                            app:sl_dy="2dp"
                            app:sl_cornerRadius="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <Button
                                android:id="@+id/button"
                                android:text="Submit Complaint"
                                android:padding="@dimen/mon_margin"
                                android:background="@color/red_800"
                                android:layout_gravity="center"
                                android:textColor="@color/white"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </com.dd.ShadowLayout>
                    </RelativeLayout>

                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>


        <TextView
            android:id="@+id/CC_count"
            style="@style/BlackCountBoxSmall"
            android:text="0"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/mon_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="130dp"
            android:layout_marginRight="@dimen/mon_wide"
            android:layout_height="wrap_content">

            <include layout="@layout/fab_person" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/mon_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</RelativeLayout>