<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/REG_heroLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/REG_handle"
                android:layout_width="match_parent"
                android:layout_height="1dp"></RelativeLayout>

            <ImageView
                android:id="@+id/REG_heroImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mon_hero_height_medium"
                android:layout_below="@id/REG_handle"
                android:scaleType="centerCrop"
                android:src="@drawable/black_woman" />


            <ImageView
                android:id="@+id/REG_dome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mon_16"
                android:visibility="gone"
                android:src="@drawable/abc_btn_check_material" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/REG_heroLayout"
            android:paddingBottom="@dimen/mon_16">

            <RelativeLayout
                android:id="@+id/REG_welcomeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/beige_pale"
                android:padding="@dimen/mon_padding">

                <TextView
                    android:id="@+id/REG_labelx"
                    style="@style/Title3TextStyleBlue"
                    android:layout_marginTop="@dimen/mon_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="Do you have a Municipality Account?" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/REG_labelx"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/mon_16"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/REG_radioYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Yes" />

                    <RadioButton
                        android:id="@+id/REG_radioNo"
                        android:checked="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/mon_wider"
                        android:text="No" />
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/REG_editLayout"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_below="@id/REG_welcomeLayout"
                android:padding="@dimen/mon_16">

                <EditText
                    android:id="@+id/REG_editFirstName"
                    style="@style/Title3TextStyleBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/mon_16"
                    android:hint="First Name"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/REG_editLastName"
                    style="@style/Title3TextStyleBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/REG_editFirstName"
                    android:layout_marginTop="@dimen/mon_padding"
                    android:hint="Surname"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/REG_editUserID"
                    style="@style/Title3TextStyleBlue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/REG_editLastName"
                    android:layout_marginTop="@dimen/mon_padding"
                    android:hint="@string/enter_id"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/REG_editPIN"
                    style="@style/Title3TextStyleRed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/REG_editUserID"
                    android:hint="@string/enter_pswd"
                    android:inputType="textPassword" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/REG_editLayout"
                android:layout_marginTop="@dimen/mon_padding"
                android:padding="@dimen/mon_16">

                <Spinner
                    android:id="@+id/REG_emailSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mon_padding" />

                <com.dd.ShadowLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/REG_emailSpinner"
                    app:sl_cornerRadius="8dp"
                    app:sl_dx="2dp"
                    app:sl_dy="2dp"
                    app:sl_shadowColor="#AA000000"
                    app:sl_shadowRadius="4dp">

                    <Button
                        android:id="@+id/REG_btnSignin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/teal_900"
                        android:padding="@dimen/mon_16"
                        android:text="Send Registration"
                        android:textColor="@color/white" />
                </com.dd.ShadowLayout>


            </RelativeLayout>
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/REG_progress"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="16dp" />

        <TextView
            android:id="@+id/REG_welcome"
            style="@style/Title2TextStyleWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/mon_wider"
            android:text="@string/welcome"/>


    </RelativeLayout>
</ScrollView>